Memperbarui fitur filter order
